--- a/src/server/views/partials/left-pane.handlebars
+++ b/src/server/views/partials/left-pane.handlebars
@@ -312,8 +312,19 @@ components:
   FetchForm.addEventListener('submit', function (ev) {
     ev.preventDefault();
     ErrorPane.classList.remove('{{css.leftPane}}__fetch-document__error--visible');
+    
+    let url = FetchInput.value;
+    let headers = new Headers();  
+    let credIndex = FetchInput.value.indexOf("@");    
+    if (credIndex != -1) {
+      let creds = url.substr(8,credIndex-8).split(":");
+      headers.append('Authorization', 'Basic ' + btoa(creds[0] + ":" + creds[1])); 
+      url = url.substr(0,8) + url.substr(credIndex+1);      
+    }
 
-    fetch(FetchInput.value)
+    fetch(url, {method:'GET',
+        headers: headers
+      })
       .then(function (response) {
         if (!response.ok) throw new Error(response.statusText);
         return response.text();
